force-app/main/default/objects/Violation_Events__e/Violation_Events__e.object-meta.xml
<CustomObject>
    <label>Violation Event</label>
    <pluralLabel>Violation Events</pluralLabel>
</CustomObject>