force-app/main/default/objects/Violation_Events__e/fields/Date_of_Violation__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Violation__c</fullName>
    <label>Date of Violation</label>
    <type>DateTime</type>
</CustomField>