force-app/main/default/objects/Violation_Events__e/fields/value__c.field-meta.xml
<CustomField>
    <fullName>value__c</fullName>
    <label>value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>