force-app/main/default/objects/Violation_Events__e/fields/Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Vehicle__c</fullName>
    <label>Vehicle</label>
    <length>20</length>
    <type>Text</type>
</CustomField>