force-app/main/default/objects/Violation_Events__e/fields/Violation_Code_c__c.field-meta.xml
<CustomField>
    <fullName>Violation_Code_c__c</fullName>
    <label>Violation_Code__c</label>
    <length>10</length>
    <type>Text</type>
</CustomField>