force-app/main/default/objects/Violation_Events__e/fields/Violation_Geolocation_Long__c.field-meta.xml
<CustomField>
    <fullName>Violation_Geolocation_Long__c</fullName>
    <label>Violation Geolocation_Long</label>
    <precision>13</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>